Example workaround + gitignore
I added a gitignore

Also, I added a workaroudn to the example the circuments a bug in the
cvgeneral command that crashes if a second parameter is not specified. I
should overload this or supply a default value.

--- a/example.tex
+++ b/example.tex
@@ -135,5 +135,5 @@
 	\\
 	אנגלית: ברמת שפת אם )מגורים בארה"ב(
 	}	
-\cvgeneral{המלצות יימסרו לפי דרישה}
+\cvgeneral{המלצות יימסרו לפי דרישה}{}
 \end{document}
